--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8889
+
+github.client.id=cbb00992291a79e5ec2b
+github.client.secret=132019e492d5af9552cb7dc71604b43f85aba35a
+github.redirect.url=http://localhost:8889/callback
